--- a/index.html
+++ b/index.html
@@ -22,51 +22,27 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> MENÚ
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="#mujer">
                             Ropa de Mujer
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                            <a class="dropdown-item" href="index.html">Categoria 1</a>
-                            <a class="dropdown-item" href="index.html">Categoria 2</a>
-                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 5</a>
-                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="#hombre">
                             Ropa de Hombre
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                            <a class="dropdown-item" href="index.html">Categoria 1</a>
-                            <a class="dropdown-item" href="index.html">Categoria 2</a>
-                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 5</a>
-                        </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="#niños">
                             Ropa de Niños
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                            <a class="dropdown-item" href="index.html">Categoria 1</a>
-                            <a class="dropdown-item" href="index.html">Categoria 2</a>
-                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
-                            <a class="dropdown-item" href="index.html">Categoria 5</a>
-                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="prueba.html">Contact</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +52,7 @@
     <!-- Page Content -->
     <div class="container">
 
-        <div class="row">
+        <div class="row" id="mujer">
             <!-- Page Heading -->
             <div class="col-lg-6">
                 <h1 class="my-4">Ropa de Mujer</h1>
@@ -111,25 +87,15 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="blusamujer.html"><img class="card-img-top" src="assent/blusa.jpeg" alt=""></a>
+                    <hr>
                     <div class="card-body" style="text-align: center;">
                         <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                            <a href="blusamujer.html" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Polo manga larga (hombro
+                                caído)</a>
                         </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
+                        <h5>S/. 25</h5>
                     </div>
                 </div>
             </div>
@@ -137,136 +103,43 @@
         <hr>
         <!-- /.row -->
 
-        <!-- title de ropa de hombre-->
-        <div class="row">
-            <!-- Page Heading -->
-            <div class="col-lg-6">
-                <h1 class="my-4">Ropa de Hombre</h1>
-            </div>
-            <div class="col-lg-6">
-                <a href="hombre.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
-            </div>
-
-        </div>
-        <!--fin title-->
-
-
-        <!-- /row-->
-
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr>
         <!-- title de ropa de niños-->
-        <div class="row">
+        <div class="row" id="niños">
             <!-- Page Heading -->
             <div class="col-lg-6">
                 <h1 class="my-4">Ropa de Niños</h1>
             </div>
             <div class="col-lg-6">
-                <a href="niños.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
             </div>
 
         </div>
         <!--fin title-->
-
 
         <!-- /row-->
 
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="joggerniños.html"><img class="card-img-top" src="assent/joggerniño.png" alt=""></a>
+                    <hr>
                     <div class="card-body" style="text-align: center;">
                         <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
+                            <a href="joggerniños.html" aria-hidden="true" tabindex="1"
                                 style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
-                        <h5>S/. 65</h5>
+                        <h5>S/. 25</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="poleraniños.html"><img class="card-img-top" src="assent/poleraniño.png" alt=""></a>
                     <div class="card-body" style="text-align: center;">
                         <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                            <a href="poleraniños.html" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Polera</a>
                         </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
-                        </h4>
-                        <h5>S/. 65</h5>
+                        <h5>S/. 35</h5>
                     </div>
                 </div>
             </div>
@@ -277,10 +150,13 @@
 
     <div id="social">
         <ul id="ul">
-            <li><a id="a" href="http://www.facebook.com" target="_blank" class="icon-facebook"></a></li>
-            <li><a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger"></a></li>
-            <li><a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank"
-                    class="icon-whatsapp"></a></li>
+            <li><a id="a" href="https://www.facebook.com/Novedades-exclusividades-Thiago-e-Ian-101200358363418/"
+                    title="Visitar la Pagina" target="_blank" class="icon-facebook"></a></li>
+            <li><a id="a" href="https://m.me/milagros.yarleque.169" target="_blank" class="icon-messenger"
+                    title="Enviar mensaje"></a></li>
+            <li><a id="a"
+                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?"
+                    title="Enviar Mensaje" target="_blank" class="icon-whatsapp"></a></li>
         </ul>
     </div>
 
