--- a/joggerniños.html
+++ b/joggerniños.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POLERA MUJER</title>
+    <title>JOOGER</title>
 
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/style.css">
@@ -51,17 +51,18 @@
         <div class="row">
 
             <div class="col-md-7">
-                <img class="img-fluid" src="assent/poleramujer.png" alt="">
+                <img class="img-fluid" src="assent/joggerazulnoche.jpeg" alt="">
             </div>
 
             <div class="col-md-5">
                 <br>
-                <h2 style="text-align: center;">POLERA MUJER</h2>
+                <h2 style="text-align: center;">JOGGER NIÑO</h2>
                 <hr>
-                <h3 class="my-3">Descripcion del Producto</h3>
+                <h3 class="my-3">Descripción del Producto</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group">Franela reactiva</li>
                     <li class="list-group">100% algodón</li>
+                    <li class="list-group">Bota elásticada</li>
                 </ul>
                 <hr>
                 <h3 class="my-3">Recomendaciones</h3>
@@ -77,31 +78,30 @@
                 <ul>
                     <b><label style="font-size: 28px;">Precio: </label></b>
                     <label for=""></label> <label for=""></label>
-                    <b><label style=" font-size: 28px;">S/. 45</label></b>
+                    <b><label style=" font-size: 28px;">S/. 25</label></b>
                 </ul>
                 <hr>
                 <h3 class="my-3">Tallas y colores disponibles</h3>
                 <ul>
-                    <button type="button" class="btn btn-info">S</button>
+                    <button type="button" class="btn btn-info">8</button>
                     <label for=""></label>
                     <label
-                        style="width: 40px; float: right; height: 40px; background-color: #002fa7; border-radius: 100%;"></label>
+                        style="width: 40px; float: right; height: 40px; background-color: #7d7f7d; border-radius: 100%;"></label>
                 </ul>
                 <ul>
-                    <button type="button" class="btn btn-info">M</button>
+                    <button type="button" class="btn btn-info">10</button>
                     <label for=""></label>
                     <label
-                        style="width: 40px; float: right; height: 40px; background-color: black; border-radius: 100%;"></label>
+                        style="width: 40px; float: right; height: 40px; background-color: #252850; border-radius: 100%;"></label>
                 </ul>
                 <hr>
-
                 <h3 class="my-3">Haz tu pedido </h3>
                 <a id="a" href="https://m.me/milagros.yarleque.169" target="_blank"
                     class="icon-messenger btn btn-primary" style="background-color: blue;"
                     title="Abrir Mensaje de Menssenger">
                     Messenger</a>
                 <a id="a"
-                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?"" target="
+                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;puedes&nbsp;dar&nbsp;más&nbsp;información?" target="
                     _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"
                     title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
             </div>
@@ -126,14 +126,14 @@
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
-                <a href="blusamujer.html">
-                    <img class="img-fluid" src="assent/otros/blusa.png" alt="">
+                <a href="poleramujer.html">
+                    <img class="img-fluid" src="assent/otros/poleramujer.png" alt="">
                 </a>
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
-                <a href="joggerniños.html">
-                    <img class="img-fluid" src="assent/otros/joggerniño.png" alt="">
+                <a href="blusamujer.html">
+                    <img class="img-fluid" src="assent/otros/blusa.png" alt="">
                 </a>
             </div>
 
@@ -153,6 +153,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <!-- /.container -->
 
