--- a/poleraniños.html
+++ b/poleraniños.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POLERA MUJER</title>
+    <title>POLERA</title>
 
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/style.css">
@@ -28,7 +28,7 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> 
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -51,14 +51,14 @@
         <div class="row">
 
             <div class="col-md-7">
-                <img class="img-fluid" src="assent/poleramujer.png" alt="">
+                <img class="img-fluid" src="assent/poleraniño.jpeg" alt="">
             </div>
 
             <div class="col-md-5">
                 <br>
-                <h2 style="text-align: center;">POLERA MUJER</h2>
+                <h2 style="text-align: center;">POLERA NIÑO</h2>
                 <hr>
-                <h3 class="my-3">Descripcion del Producto</h3>
+                <h3 class="my-3">Descripción del Producto</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group">Franela reactiva</li>
                     <li class="list-group">100% algodón</li>
@@ -77,24 +77,17 @@
                 <ul>
                     <b><label style="font-size: 28px;">Precio: </label></b>
                     <label for=""></label> <label for=""></label>
-                    <b><label style=" font-size: 28px;">S/. 45</label></b>
+                    <b><label style=" font-size: 28px;">S/. 35</label></b>
                 </ul>
                 <hr>
                 <h3 class="my-3">Tallas y colores disponibles</h3>
                 <ul>
-                    <button type="button" class="btn btn-info">S</button>
+                    <button type="button" class="btn btn-info">8</button>
                     <label for=""></label>
                     <label
-                        style="width: 40px; float: right; height: 40px; background-color: #002fa7; border-radius: 100%;"></label>
-                </ul>
-                <ul>
-                    <button type="button" class="btn btn-info">M</button>
-                    <label for=""></label>
-                    <label
-                        style="width: 40px; float: right; height: 40px; background-color: black; border-radius: 100%;"></label>
+                        style="width: 40px; float: right; height: 40px; background-color: #00aae4; border-radius: 100%;"></label>
                 </ul>
                 <hr>
-
                 <h3 class="my-3">Haz tu pedido </h3>
                 <a id="a" href="https://m.me/milagros.yarleque.169" target="_blank"
                     class="icon-messenger btn btn-primary" style="background-color: blue;"
@@ -114,8 +107,8 @@
         <div class="row">
 
             <div class="col-md-3 col-sm-6 mb-4">
-                <a href="poleraniños.html">
-                    <img class="img-fluid" src="assent/otros/poleraniño.png" alt="">
+                <a href="blusamujer.html">
+                    <img class="img-fluid" src="assent/otros/blusa.png" alt="">
                 </a>
             </div>
 
@@ -126,8 +119,8 @@
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
-                <a href="blusamujer.html">
-                    <img class="img-fluid" src="assent/otros/blusa.png" alt="">
+                <a href="poleramujer.html">
+                    <img class="img-fluid" src="assent/otros/poleramujer.png" alt="">
                 </a>
             </div>
 
