--- a/blusamujer.html
+++ b/blusamujer.html
@@ -99,7 +99,7 @@
                     title="Abrir Mensaje de Menssenger">
                     Messenger</a>
                 <a id="a"
-                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;puedes&nbsp;dar&nbsp;más&nbsp;información?"" target="
+                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;quisiera&nbsp;adquirir&nbsp;la&nbsp;blusa?" target="
                     _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"
                     title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
             </div>
