--- a/joggermujer.html
+++ b/joggermujer.html
@@ -93,7 +93,7 @@
                     style="background-color: blue;" title="Abrir Mensaje de Menssenger">
                     Messenger</a>
                 <a id="a"
-                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?" target="
+                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;quisiera&nbsp;adquirir&nbsp;el&nbsp;jogger?" target="
                     _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"
                     title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
             </div>
@@ -102,8 +102,6 @@
 
         <!-- Related Projects Row -->
         <h3 class="my-4">Otros Productos</h3>
-
-        <div class="row">
 
             <div class="row">
 
@@ -133,7 +131,6 @@
     
             </div>
 
-        </div>
         <!-- /.row -->
 
         <div class="row">
