--- a/poleraniños.html
+++ b/poleraniños.html
@@ -94,7 +94,7 @@
                     title="Abrir Mensaje de Menssenger">
                     Messenger</a>
                 <a id="a"
-                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?"" target="
+                    href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;quisiera&nbsp;adquirir&nbsp;la&nbsp;polera&nbsp;en&nbsp;talla&nbsp;-" target="
                     _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"
                     title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
             </div>
